kubernetes/apps/developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: cleanbrain-me-developer
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
